Fix nav on mobile

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -300,33 +300,32 @@ nav span {
     font-size: 18px;
 }
 
+nav a.link {
+    margin: 0 1em 1em 0;
+}
+
 nav .nav-links {
     display: block;
     text-align: left;
 }
 
 nav a.link:nth-child(2) {
-    margin-left: 20px;
     border-bottom: 2px solid #147AAB;
 }
 
 nav a.link:nth-child(3) {
-    margin-left: 20px;
     border-bottom: 2px solid #E36511;
 }
 
 nav a.link:nth-child(4) {
-    margin-left: 20px;
     border-bottom: 2px solid #00B180;
 }
 
 nav a.link:nth-child(5) {
-    margin-left: 20px;
     border-bottom: 2px solid #D04B36;
 }
 
 nav a.link:nth-child(6) {
-    margin-left: 20px;
     border-bottom: 2px solid #675997;
 }
 
@@ -517,7 +516,6 @@ table {
     nav span {
         padding: 5px 6px 0 6px;
         font-size: 100%;
-	margin-right: 0px;
     }
 
     nav .nav-links {
